--- a/static/styles/bootstrap-dsg.css
+++ b/static/styles/bootstrap-dsg.css
@@ -6401,7 +6401,7 @@
       margin-right: 20px !important; } }
   .bootstrap .affix-scroll-nav-top {
     top: 0;
-    z-index: 999;
+    z-index: 99999;
     display: block;
     border-top: 1px solid #cccccc;
     border-bottom: 1px solid #cccccc; }
